<resources>
    <string name="app_name">SimpleDiceRoller</string>
    <string name="main_title">Dungeons and Dragons Dice Roller</string>
    <string name="main_d100">Roll D100</string>
    <string name="main_d20">Roll D20</string>
    <string name="main_d12">Roll D12</string>
    <string name="main_d10">Roll D10</string>
    <string name="main_d8">Roll D8</string>
    <string name="main_d6">Roll D6</string>
    <string name="main_d4">Roll D4</string>
    <string name="main_d2">Roll D2</string>
</resources>